--- a/index.html
+++ b/index.html
@@ -1,56 +1,61 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link rel="stylesheet" href="index.css">
-	</head>
-	<body>
-		<nav>
-			<ul>
-				<li><a href="#welcome-section">About</a></li>
-				<li><a href="#projects">Work</ahref></li>
-				<li><a href="#contact">Contact</a></li>
-			</ul>
-		</nav>
 
-		<div id="welcome-section" class="intro">
-			<h1>Hey i'm Aylin.</h1>
-			<p>a web developer</p>
-		</div>
+<head>
+    <link rel="stylesheet" href="index.css">
+</head>
 
-		<div id="projects" class="work">
-			<h2 class="work-header">These are some of my projects..</h2>
-			<a href="https://codepen.io/aylinsaglam/pen/pQBzQE" target="_blank" class="project-tile">
-				<img class="project-pic" src="https://cloud.githubusercontent.com/assets/15967809/17642794/d084d718-6171-11e6-83fa-ede5d0a67ad2.png" alt="project"></img>
-				<div class="project-title">Tribute Page</div>
-			</a>
-			
-			<a href="https://codepen.io/aylinsaglam/pen/yQrLPp" target="_blank" class="project-tile">
-				<img class="project-pic" src="" alt="project"></img>
-				<div class="project-title">Survey Form</div>
-			</a>
-			
-			<a href="https://codepen.io/aylinsaglam/pen/WLQpam" target="_blank" class="project-tile">
-				<img class="project-pic" src="" alt="project"></img>
-				<div class="project-title">Product Landing Page</div>
-			</a>
-			
-			<a href="https://codepen.io/aylinsaglam/pen/wRyqwV" target="_blank" class="project-tile">
-				<img class="project-pic" src="" alt="project"></img>
-				<div class="project-title">Technical Documentation Page</div>
-			</a>
-			<a href="https://codepen.io/dashboard/" target="_blank" class="show-all">Show all</a>
-		</div>
+<body>
+    <nav>
+        <ul>
+            <li><a href="#welcome-section">About</a></li>
+            <li><a href="#projects">Work</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 
-		<div id="contact" class="contact">
-			<div class="header">
-				<h1>Let's work together...</h1>
-				<p>How do you take your coffee?</p>
-			</div>
-			<a href="https://www.linkedin.com/in/aylin-saglam/" target="_blank" class="contact-details">LinkedIn</a>
-			<a href="https://github.com/aylinsaglam" target="_blank" class="contact-details">GitHub</a>
-			<a href="https://twitter.com/Ayl1nSaglam" target="_blank" class="contact-details">Twitter</a>
-			<a href="mailto:aylin.ayla.saglam@gmail.com" class="contact-details">Send a mail</a>
-			<a href="tel:507-630-7520" class="contact-details">Call me</a>
-		</div>
-	</body>
+    <div id="welcome-section" class="intro">
+        <h1>Hey i'm Aylin.</h1>
+        <p>a web developer</p>
+    </div>
+
+    <div id="projects" class="work">
+        <h2 class="work-header">These are some of my projects..</h2>
+        <div class="project-tile-container">
+            <a href="https://codepen.io/aylinsaglam/pen/pQBzQE" target="_blank" class="project-tile">
+                <img class="project-pic" src="https://raw.githubusercontent.com/aylinsaglam/fcc-tribute-page/master/tribute-page.png" alt="project"></img>
+                <span>Tribute Page</span>
+            </a>
+
+            <a href="https://codepen.io/aylinsaglam/pen/yQrLPp" target="_blank" class="project-tile">
+                <img class="project-pic" src="https://raw.githubusercontent.com/aylinsaglam/fcc-survey-form/master/survey-form.png" alt="project"></img>
+                <span>Survey Form</span>
+            </a>
+
+            <a href="https://codepen.io/aylinsaglam/pen/WLQpam" target="_blank" class="project-tile">
+                <img class="project-pic" src="https://raw.githubusercontent.com/aylinsaglam/fcc-product-landing-page/master/product-landing-page.png" alt="project"></img>
+                <span>Product Landing Page</span>
+            </a>
+
+            <a href="https://codepen.io/aylinsaglam/pen/wRyqwV" target="_blank" class="project-tile">
+                <img class="project-pic" src="https://raw.githubusercontent.com/aylinsaglam/fcc-technical-documentation-page/master/technical-documentation-page.png" alt="project"></img>
+                <span>Technical Documentation Page</span>
+            </a>
+        </div>
+        <a href="https://codepen.io/dashboard/" target="_blank" class="show-all">Show all</a>
+    </div>
+
+    <div id="contact" class="contact">
+        <div class="header">
+            <h1>Let's work together...</h1>
+            <p>How do you take your coffee?</p>
+        </div>
+        <a href="https://www.linkedin.com/in/aylin-saglam/" target="_blank" class="contact-details">LinkedIn</a>
+        <a href="https://github.com/aylinsaglam" target="_blank" class="contact-details">GitHub</a>
+        <a href="https://twitter.com/Ayl1nSaglam" target="_blank" class="contact-details">Twitter</a>
+        <a href="mailto:aylin.ayla.saglam@gmail.com" class="contact-details">Send a mail</a>
+        <a href="tel:507-630-7520" class="contact-details">Call me</a>
+    </div>
+</body>
+
 </html>
